@@ -25,6 +25,8 @@
       - [ ] v3: sigsegv trap handling
 - [ ] Should find or create a suitable property editor 
 **** TODO Continue Logger in src/logger
+     CLOCK: [2011-10-31 lun. 10:51]--[2011-10-31 lun. 11:25] =>  0:34
+     CLOCK: [2011-10-31 lun. 10:39]--[2011-10-31 lun. 10:51] =>  0:12
      CLOCK: [2011-10-30 dim. 11:42]--[2011-10-30 dim. 12:07] =>  0:25
      CLOCK: [2011-10-29 sam. 16:28]--[2011-10-29 sam. 17:07] =>  0:39
      CLOCK: [2011-07-17 dim. 21:29]--[2011-07-17 dim. 21:54] =>  0:25
@@ -59,7 +61,7 @@
 - [ ] Logger may log process time
 - [ ] configure must search for boost libraries
 - [ ] Create a DEPENDENCIES file
-- [ ] Should remove autoprojext generated files
+- [ ] Should remove autoproject generated files
       logger.cc, xmalloc.h, xmalloc.c ...
 - [ ] Should use pkg-config 
 - [ ] Many members must be private
