@@ -16,6 +16,8 @@ logger - GPLv3 - The RainbruRPG's stream-oriented multi-output logging
    FT is the ROADMAP file time
 
 * v0.0.0-3 (16 jul 2011 - ???) SLOC ??? FT ??:??
+- Moved some Logger.hpp functions to implementation
+- Documentation update for some classes
 - Documentation added for some classes
 - configure checks for Boost.Program_options
 - All files ready for documentation (\file)
